pod1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod1
  template:
    metadata:
      labels:
        app: pod1
    spec:
      containers:
        - name: pod1
          image: nginx
          ports:
            - containerPort: 80
          command:
            - /bin/bash
            - -c
            - "echo '<html><body><h1>You have reached Pod 1</h1></body></html>' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
