pod1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod1-service
spec:
  selector:
    app: pod1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
