pod2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod2-service
spec:
  selector:
    app: pod2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
