pod3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod3-service
spec:
  selector:
    app: pod3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
