ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - hosts:
        - 192.168.49.2.nip.io
      http:
        paths:
          - path: /pod1
            pathType: Prefix
            backend:
              service:
                name: pod1-service
                port:
                  number: 80
          - path: /pod2
            pathType: Prefix
            backend:
              service:
                name: pod2-service
                port:
                  number: 80
          - path: /pod3
            pathType: Prefix
            backend:
              service:
                name: pod3-service
                port:
                  number: 80
